--- a/project/stylesheet.css
+++ b/project/stylesheet.css
@@ -1,5 +1,6 @@
 body{
   text-align: center;
+  background-color: cyan;
 }
 
 .login_button{
@@ -19,7 +20,6 @@ body{
 }
 
 .thread{
-
   background-color: lightgray;
   padding: 10px;
 }
@@ -35,4 +35,10 @@ body{
 
 .page-header{
   margin-top: 10px;
+}
+
+.error{
+  text-align: center;
+  margin-top: 15%;
+  font-size: 15px;
 }
